# provi-kos-check

./: CMakeLists.txt  Changelog.txt  ProvidenceKOSLookup.cpp  ProvidenceKOSLookup.h  ProvidenceKOSLookup.kdev4  README.md  main.cpp  pkosversion.h
include/: pkostypes.h
lib/: CMakeLists.txt  audio.cpp  audio.h  cachedb.cpp  cachedb.h  cvakosapi.cpp  cvakosapi.h  eveapi.cpp  eveapi.h  eveapixmlhandler.cpp  eveapixmlhandler.h  hotdropperdb.cpp  hotdropperdb.h  logwatcher.cpp  logwatcher.h  network.cpp  network.h
lib/pdb/: CMakeLists.txt  PilotDatabaseTypes.h  client.cpp  client.h
res/: about.html  donation-list.txt  ressources.qrc
ui/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  configdialog.cpp  configdialog.h  koslistentrycompact.cpp  koslistentrycompact.h  koslistseperator.cpp  koslistseperator.h  mainwindow.cpp  mainwindow.h  mimetypes.h
